# HenryBennettgpr200

./: CMakeLists.txt
assignments/assignment1_helloTriangle/: main.cpp
assignments/assignment2_sunset/: main.cpp
assignments/assignment2_sunset/assets/: fragmentShader.frag  vertexShader.vert
assignments/assignment3_textures/: main.cpp
assignments/assignment3_textures/assets/: background.frag  background.vert  character.frag  character.vert
assignments/assignment4_transformations/: main.cpp
assignments/assignment4_transformations/assets/: vertexShader.vert
assignments/assignment5_camera/: main.cpp
assignments/assignment5_camera/assets/: vertexShader.vert
assignments/assignment6_proceduralGeometry/: main.cpp
assignments/assignment7_lighting/: main.cpp
assignments/assignment7_lighting/assets/: defaultLit.frag  defaultLit.vert
assignments/final_v1_Billboarding/: CMakeLists.txt  billboard.cpp  billboard.h  main.cpp
assignments/final_v1_Billboarding/Assets/: billboard.frag  billboard.vert  defaultLit.frag
core/: CMakeLists.txt
core/ew/: shader.cpp  shader.h
core/hb/: camera.h  procGen.cpp  procGen.h  shader.cpp  shader.h  texture.cpp  texture.h  transformations.h
